data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_769.wast
;; 10. **Test Description**:    Write a sequence where `nop` instructions are placed before and after `br_table` that has the maximum possible valid index. This checks if extreme valid index values are correctly handled regardless of `nop` position.      **Specific Constraint**: Handling of extreme upper bound index values with `nop`.      **Edge Case**: Maximum bound index in `br_table`.

(assert_invalid
  (module 
    (func $br_table_nop
      (block 
        (nop)
        (br_table 0 0 0)
        (nop)
      )
    )
  )
  "type mismatch"
)